--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
             </div>
         </div>
 
-        <div class=" w-9">
+        <div class=" w-9 mr-9">
             <a rel="noopener noreferrer" href="#" class="flex-1">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18" />
